kubernetes/infra/istio-system/istiod/app/peer-auth.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/security.istio.io/peerauthentication_v1.json
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: PERMISSIVE
